[ALL] Removed SingleThreadExecutor from EventsQueue [HTTP] Handling of etags [ALL] Cleanup